# stake

./: Anchor.toml  backup.json  package.json
programs/stake/: Cargo.toml
programs/stake/src/: lib.rs
programs/stake/src/instructions/: add_emission.rs  add_funds.rs  add_token.rs  change_reward.rs  claim.rs  close.rs  close_collection.rs  close_emission.rs  delegate_stake.rs  distribute.rs  extend_emission.rs  force_unstake.rs  init.rs  init_collection.rs  init_distribution.rs  init_program_config.rs  mod.rs  pay_subscription.rs  remove_funds.rs  resize.rs  stake.rs  toggle_collection_active.rs  toggle_stake_active.rs  unstake.rs  update_program_config.rs  update_stake.rs  update_theme.rs
programs/stake/src/state/: collection.rs  distribution.rs  emission.rs  mod.rs  nft_record.rs  program_config.rs  share_record.rs  stake_record.rs  staker.rs  theme.rs
programs/stake/src/utils/: calc_actual_balance.rs  calc_pro_rata_fee.rs  calc_reward.rs  calc_total_emission.rs  calc_tx_fee.rs  mod.rs
tests/: helper.ts
tests/e2e/: emissions.ts  index.ts
tests/helpers/: instructions.ts  pdas.ts  utils.ts
tests/instructions/: close-collection.ts  init.ts  pay-subscription.ts  program-config.ts  stake.ts  unstake.ts  update-stakooor.ts  update-theme.ts
